--- a/app/src/main/res/layout/activity_account.xml
+++ b/app/src/main/res/layout/activity_account.xml
@@ -22,7 +22,8 @@
         android:layout_marginRight="40dp"
         android:layout_marginBottom="40dp"
         android:paddingBottom="15dp"
-        android:paddingTop="15dp" />
+        android:paddingTop="15dp"
+        />
 
     <ProgressBar
         android:id="@+id/account_progress_circle"
