--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -27,7 +27,7 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="14dp"
             android:layout_marginRight="14dp"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="16dp"
             android:orientation="vertical"
             android:paddingBottom="20dp">
 
@@ -71,6 +71,7 @@
                             android:background="@android:color/transparent"
                             android:hint="이름을 입력하세요"
                             android:inputType="text"
+                            android:maxLength="10"
                             android:maxLines="1"
                             android:textSize="12sp" />
                     </LinearLayout>
@@ -129,6 +130,7 @@
                             android:background="@android:color/transparent"
                             android:hint="닉네임을 입력하세요"
                             android:inputType="text"
+                            android:maxLength="10"
                             android:maxLines="1"
                             android:textSize="12sp" />
                     </LinearLayout>
@@ -145,6 +147,8 @@
                     android:textSize="11sp" />
 
             </LinearLayout>
+
+
 
             <LinearLayout
                 android:id="@+id/signup_major_txt_layout"
@@ -188,31 +192,20 @@
                             android:hint="전공을 입력하세요 (자동완성)"
                             android:inputType="text"
                             android:maxLines="1"
+                            android:maxLength="12"
                             android:textSize="12sp" />
                     </LinearLayout>
                 </android.support.v7.widget.CardView>
-            </LinearLayout>
-
-            <LinearLayout
-                android:id="@+id/signup_grade_spinner_layout"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="8dp"
-                android:layout_marginTop="10dp"
-                android:orientation="vertical">
 
                 <TextView
+                    android:id="@+id/signup_major_constraint_txt"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="학년"
-                    android:textColor="#848181"
-                    android:textSize="12sp" />
-
-                <android.support.v7.widget.AppCompatSpinner
-                    android:id="@+id/signup_grade_spinner"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:entries="@array/signup_grade" />
+                    android:layout_gravity="right"
+                    android:layout_marginRight="8dp"
+                    android:text="0/12"
+                    android:textColor="#bcb5e1"
+                    android:textSize="11sp" />
 
             </LinearLayout>
 
@@ -258,6 +251,7 @@
                             android:hint="학번을 입력하세요"
                             android:inputType="numberDecimal"
                             android:maxLines="1"
+                            android:maxLength="8"
                             android:textSize="12sp" />
                     </LinearLayout>
                 </android.support.v7.widget.CardView>
@@ -275,9 +269,33 @@
             </LinearLayout>
 
             <LinearLayout
+                android:id="@+id/signup_grade_spinner_layout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="8dp"
+                android:layout_marginTop="10dp"
+                android:orientation="vertical">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="학년"
+                    android:textColor="#848181"
+                    android:textSize="12sp" />
+
+                <android.support.v7.widget.AppCompatSpinner
+                    android:id="@+id/signup_grade_spinner"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:entries="@array/signup_grade" />
+
+            </LinearLayout>
+
+            <LinearLayout
                 android:id="@+id/signup_gender_spinner_layout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
                 android:layout_marginLeft="8dp"
                 android:orientation="vertical">
 
