--- a/app/src/main/res/layout/dialog_profile.xml
+++ b/app/src/main/res/layout/dialog_profile.xml
@@ -11,8 +11,9 @@
 
         <TextView
             android:id="@+id/intro_dialog_title_txt"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
             android:layout_marginTop="24dp"
             android:layout_marginLeft="24dp"
             android:layout_marginRight="24dp"
@@ -20,6 +21,17 @@
             android:textSize="20sp"
             android:textColor="#000000"
             android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/intro_dialog_constraint_txt"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_marginTop="34dp"
+            android:layout_marginRight="24dp"
+            android:text="0/100"
+            android:textColor="#bcb5e1"
+            android:textSize="11sp" />
 
         <EditText
             android:id="@+id/intro_dialog_content_edit"
@@ -30,6 +42,7 @@
             android:layout_marginRight="24dp"
             android:layout_marginTop="20dp"
             android:layout_marginBottom="24dp"
+            android:maxLength="100"
             android:textSize="12sp"
             android:background="@null"
             android:gravity="top" />
