--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -171,9 +171,10 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_alignParentEnd="true"
-                            android:layout_marginEnd="14dp"
+                            android:layout_marginEnd="8dp"
                             android:layout_centerVertical="true"
                             android:background="@android:color/transparent"
+                            android:padding="8dp"
                             android:src="@drawable/ic_create_black_24px" />
 
                     </RelativeLayout>
