--- a/app/src/main/res/layout/home_fragment.xml
+++ b/app/src/main/res/layout/home_fragment.xml
@@ -113,11 +113,41 @@
                         android:textSize="@dimen/secondary_text_size" />
                 </RelativeLayout>
 
-                <ListView
-                    android:id="@+id/home_profile_list"
+                <RelativeLayout
                     android:layout_width="match_parent"
-                    android:layout_height="200dp"
-                    android:orientation="vertical" />
+                    android:layout_height="wrap_content">
+
+                    <ListView
+                        android:id="@+id/home_profile_list"
+                        android:layout_width="match_parent"
+                        android:layout_height="200dp"
+                        android:orientation="vertical" />
+
+                    <LinearLayout
+                        android:id="@+id/home_profile_place_layout"
+                        android:layout_width="match_parent"
+                        android:layout_height="200dp"
+                        android:orientation="vertical">
+
+
+                        <ImageView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center_horizontal"
+                            android:layout_marginTop="40dp"
+                            android:src="@drawable/ic_priority_high_black_24px" />
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center_horizontal"
+                            android:layout_marginTop="20dp"
+                            android:text="프로필 검색결과가 없습니다!"
+                            android:textSize="12sp" />
+
+                    </LinearLayout>
+
+                </RelativeLayout>
 
                 <include layout="@layout/divider" />
 
@@ -146,11 +176,41 @@
                         android:textSize="@dimen/secondary_text_size" />
                 </RelativeLayout>
 
-                <ListView
-                    android:id="@+id/home_party_list"
+                <RelativeLayout
                     android:layout_width="match_parent"
-                    android:layout_height="200dp"
-                    android:orientation="vertical" />
+                    android:layout_height="wrap_content">
+
+                    <ListView
+                        android:id="@+id/home_party_list"
+                        android:layout_width="match_parent"
+                        android:layout_height="200dp"
+                        android:orientation="vertical" />
+
+                    <LinearLayout
+                        android:id="@+id/home_party_place_layout"
+                        android:layout_width="match_parent"
+                        android:layout_height="200dp"
+                        android:orientation="vertical">
+
+
+                        <ImageView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center_horizontal"
+                            android:layout_marginTop="40dp"
+                            android:src="@drawable/ic_priority_high_black_24px" />
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center_horizontal"
+                            android:layout_marginTop="20dp"
+                            android:text="모임 검색결과가 없습니다!"
+                            android:textSize="12sp" />
+
+                    </LinearLayout>
+                </RelativeLayout>
+
             </LinearLayout>
         </ScrollView>
     </RelativeLayout>
