--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -207,7 +207,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_centerVertical="true"
-                            android:layout_marginLeft="16dp"
+                            android:layout_marginStart="16dp"
                             android:layout_marginTop="16dp"
                             android:background="@android:color/transparent"
                             android:text="보유기술"
@@ -215,15 +215,19 @@
                             android:textSize="16sp"
                             android:textStyle="bold" />
 
-                        <ImageButton
-                            android:id="@+id/profile_tag_write_btn"
+                        <TextView
+                            android:id="@+id/profile_tag_hint_txt"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_alignParentEnd="true"
-                            android:layout_marginEnd="12dp"
                             android:layout_centerVertical="true"
+                            android:layout_alignParentRight="true"
+                            android:layout_marginEnd="16dp"
+                            android:layout_marginTop="16dp"
                             android:background="@android:color/transparent"
-                            android:src="@drawable/ic_add_black_24px" />
+                            android:text="태그 입력 후 엔터!"
+                            android:textColor="#828282"
+                            android:textSize="10sp"
+                            android:textStyle="bold" />
 
                     </RelativeLayout>
 
@@ -234,7 +238,7 @@
                         android:padding="12dp"
                         app:atg_backgroundColor="#d7d0f9"
                         app:atg_borderColor="#d7d0f9"
-                        app:atg_inputHint="내용입력"
+                        app:atg_inputHint="이곳을 클릭!"
                         app:atg_inputHintColor="#828282"
                         app:atg_inputTextColor="#000000"
                         app:atg_isAppendMode="true"
