모임 검색 UI 이슈 해결

--- a/app/src/main/res/layout/dialog_profile.xml
+++ b/app/src/main/res/layout/dialog_profile.xml
@@ -30,7 +30,7 @@
             android:layout_marginTop="34dp"
             android:layout_marginRight="24dp"
             android:text="0/100"
-            android:textColor="#bcb5e1"
+            android:textColor="#828282"
             android:textSize="11sp" />
 
         <EditText
