관리자 입장에서의 수락 / 거절 버튼 출력

--- a/app/src/main/res/layout/activity_party_detail.xml
+++ b/app/src/main/res/layout/activity_party_detail.xml
@@ -218,7 +218,6 @@
                 android:textColor="#a15ffb"
                 android:textSize="12sp"
                 android:textStyle="bold" />
-
         </LinearLayout>
 
         <TextView
@@ -231,11 +230,10 @@
             android:textSize="12sp"
             android:textStyle="bold" />
 
-        <ListView
+        <android.support.v7.widget.RecyclerView
             android:id="@+id/party_detail_member_list"
             android:layout_width="match_parent"
             android:layout_height="128dp"
             android:layout_marginTop="8dp"/>
     </LinearLayout>
-
 </RelativeLayout>
