--- a/app/src/main/res/layout/home_fragment.xml
+++ b/app/src/main/res/layout/home_fragment.xml
@@ -27,6 +27,8 @@
             android:layout_height="64dp"
             android:layout_centerInParent="true"
             android:animateLayoutChanges="true"
+            android:focusable="true"
+            android:focusableInTouchMode="true"
             android:background="@android:color/transparent"
             android:paddingEnd="14dp"
             android:paddingStart="14dp"
@@ -55,10 +57,10 @@
                         android:maxLines="1" />
 
                     <ImageView
+                        android:id="@+id/home_search_btn"
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
                         android:layout_weight="1"
-                        android:onClick="@{() -> view.changeSearchResultState()}"
                         android:src="@drawable/ic_search_black_24px" />
 
                 </LinearLayout>
