파티리스트에서 목록의 유저를 누르면 디테일 프로필로 가고 그곳에서 메일을 보낼수있게 수정

--- a/app/src/main/res/layout/user_profile_detail_activity.xml
+++ b/app/src/main/res/layout/user_profile_detail_activity.xml
@@ -5,6 +5,7 @@
     android:focusableInTouchMode="true">
 
     <data>
+
         <variable
             name="view"
             type="org.collapsed.ssuparty_android.ui.userprofiledetail.UserProfileDetailActivity" />
@@ -44,6 +45,16 @@
                     android:textColor="#ffffff"
                     android:textSize="15dp"
                     android:textStyle="bold" />
+
+                <ImageView
+                    android:id="@+id/userdetailprofile_email_btn"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentEnd="true"
+                    android:layout_centerVertical="true"
+                    android:layout_marginEnd="16dp"
+                    android:padding="4dp"
+                    android:src="@drawable/ic_email_black_24px" />
 
             </RelativeLayout>
 
